--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "5.6.2"
+  },
+  "require": {
+    "zendframework/zend-eventmanager": "3.0.1"
   }
 }
